background fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,6 @@ html, body {
   background-color: #EAEAED;
   background-attachment: fixed;
   background-size: cover;
-  background-position:center;
   height:100vh;
   display:flex;
   align-items:center;
